mule-management-console/v/3.5/mmc-walkthrough.adoc
=  MMC演练

Mule管理控制台的图形界面为您的Web应用程序服务器提供了可视性，因此您可以监视和管理多个Mule应用程序。

[%header%autowidth.spread]
|===
| *Walkthrough Description* a |本演练演示了MMC作为监视工具提供的一些基本功能：

* 如何注册服务器
* 如何将示例应用程序部署到服务器上
* 如何监视应用程序中的流程活动
* 如何取消部署应用程序

在本演练结束时，您将使用控制台成功地将示例应用程序部署到服务器上，通过监视应用程序的活动来验证应用程序的运行状况个人流量，并从服务器上取消部署应用程序。

| *Learning Outcome*  |完成演练后，您将了解可以使用控制台注册服务器并部署和管理应用程序的基本机制。
|===

== 假设

本演练假定您熟悉[Mule应用程序和Mule流程]，并且已下载并安装包含Mule管理控制台的*trail version*的{​​{0}}。除了安装之外，您无需完成任何特定的安装配置即可完成本演练。如果您尚未下载试用版软件包，请参阅[安装]文档。

== 启动MMMC

[TIP]
`$MULE_HOME`是Mule安装所在的目录，例如`/opt/mule-3.4.1]`。

. 在命令行中，将*`mule`*可执行文件放置在`$MULE_HOME/bin`目录中。运行`mule`可执行文件：

 ** Windows: Open a command window, then navigate to the `$MULE_HOME/bin` directory. Type `mule` from within the `/bin` directory. Alternatively, you can execute `mule.bat` to start Mule.

 ** Unix: Open a terminal window, then navigate to the `$MULE_HOME/bin` directory. Type `./mule` to start Mule, or `./mule start` to launch Mule in the terminal background.

.  Mule自动启动并启动MMC。一旦Mule开始踢球，使用浏览器导航到以下URL：http：// localhost：8585 / mmc。

. 使用以下凭据登录到MMC：

.. 用户名：admin
.. 密码：admin

. 由于您正在使用此捆绑的路径分发，因此服务器会自动在控制台中注册。首次登录时显示的控制台显示板"Quick Start"面板表示没有要注册的服务器。点击右上角的*X*关闭快速启动面板。
+
image:MMC-quickstartpanel-annotated.png[MMC-quickstartpanel注解]

== 注册服务器

在使用MMC将Mule应用程序部署到服务器之前，必须先将服务器标识为MMC。这个动作被称为注册服务器。

第一次运行MMC的试用版时，控制台会自动注册本地服务器，因此_不需要按照以下步骤操作;向前跳到[下一节]。

但是，如果您不止一次运行试用版，您可能希望注册一个不同的服务器。注册服务器的最简单方法是使用控制台的自动发现功能。控制台会自动感应Mule服务器正在运行并捕获注册所需的大部分信息，因此可以轻松注册任何"discovered"服务器。

. 点击*Server*标签，然后点击左侧导航窗格中的*Unregistered*。

. 控制台列出所有联机且尚未注册的服务器。选择*Mule-3.4 server*，然后点击*Register*按钮。
+
image:mmc-register_servers.png[MMC-register_servers]

. 点击左侧导航窗格中的*All*，查看您注册的服务器。
+
image:mmc-server_registered.png[MMC-server_registered]

或者，您可以手动注册服务器。为此，

. 点击*Severs*标签，然后点击*Add*按钮，然后选择*New Server*。
+
image:MMC-addserver.png[MMC-addserver]

. 在打开的屏幕上，为服务器输入*Server Name*和*Mule Agent URL*，然后点击*Add*。
+
image:MMC-addserver-name.png[MMC-addserver名]

== 部署应用程序

在将控制台标识为服务器后，您现在可以将应用程序部署到该控制台。为此，您首先要创建一个称为"deployment"的应用程序组，这些应用程序捆绑了应用程序，以便您可以将该组部署到一台或多台服务器。然后，在部署中部署应用程序。本演练描述如何在Mule ESB下载的`example`文件夹中部署作为示例应用程序包含的Hello应用程序。

. 点击控制台中的*Deployments*标签。
. 点击*New*创建新的部署。
. 输入一个唯一的*Deployment Name*，例如`HelloWorld`。
. 点击*Upload New Application*按钮。
. 在出现的对话框中，使用*Browse*按钮导航到以下文件路径：`$MULE_HOME/examples/hellow/mule-example-hello-3.4.1.zip`。
. 点击*Add*。控制台通过部署上传应用程序（请参见下文）。
+
image:uploaded.png[上传]

. 要识别部署`HelloWorld`部署的服务器，请使用*Servers*标题下的下拉列表选择启动时控制台注册的服务器。
+
image:mmc-uploaded_server.png[MMC-uploaded_server]

. 点击*Deploy*，将`HelloWorld`部署（包含Hello应用程序）部署到服务器。
+
image:all_deployments.png[all_deployments]

部署应用程序时，控制台会自动将Hello应用程序保存到服务器*repository*。如果您愿意，您可以点击*Save*而不是*Deploy*，将应用程序简单地保存到服务器存储库供以后部署。点击左侧导航面板中的*Repository*，查看保存在存储库中的所有应用程序。 （请注意，在试用版的存储库中，MMC包含与下载软件包捆绑在一起的所有示例应用程序）。

image::mmc-repositoryexamples.png[MMC-repositoryexamples]

== 使用已部署的应用程序

要确认Hello应用程序已启动并正在运行，请在浏览器中输入以下URL：`+http://localhost:8888/?name=Ross+`。应用程序返回一个响应，确认应用程序确实已经部署。

image::hello_world.png[你好，世界]

== 查看流程详细信息

使用该应用程序返回"hello"响应后，您可以访问控制台窗口以查看有关如何处理请求的详细信息。

. 在控制台中，点击*Flows*标签。该屏幕仅显示Hello应用程序中的流程。该表格显示了应用程序处理的事件数量（处理事件和接收事件）以及每个单独流程的平均和总事件处理时间的总结（见下文）。
+
image::flows.png[流动]

. 您可以暂停，停止或启动单个流程或流程。例如，使用复选框选择一个或多个流程，然后单击*Control Flows*按钮，然后选择*Stop*以停止流程接受更多事件。

. 单击流名称以检查有关流的更多详细信息。例如，点击*HelloWorld*流程名称以打开包含两个选项卡的屏幕：

** 如果*Summary*选项卡显示有关流程的摘要信息，例如其包含的消息来源和消息处理程序，其状态（已启动，已停止，已暂停）以及有关事件的详细信息已处理
+
image::flow_summary.png[flow_summary]

**  *Endpoints*选项卡显示包含端点类型，地址，连接器信息，是否过滤，是否同步或异步，以及它是否处理事务。点击一个或多个端点，然后使用*Control Endpoints*按钮启动或停止这些端点。
+
image:flow-endpoints.png[流端点]

== 取消部署应用程序

. 点击*Deployments*标签

. 选中*HelloWorld*部署旁边的复选框。

. 点击*Undeploy*。控制台停止所选部署中的所有应用程序。在这个例子中，你只有部署中的应用程序（Hello）。
+
image::mmc-undeploy.png[MMC-取消部署]

. 要阻止Mule本身，请在启动Mule的终端中点击`Ctrl+C`。如果您在终端背景中启动了Mule，请发出命令`$MULE_HOME/bin/mule stop`。

== 另请参阅

* 进一步定位到[控制台]
* 精益如何[设置您的MMC实例]与企业中的其他组件一起使用
* 详细了解[MMC的技术架构]
